[gd_scene load_steps=2 format=3 uid="uid://geytg8x6c7no"]

[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/GenericDetails/MorphologyGenericDetails.gd" id="1_1ma3u"]

[node name="MorphologyGenericDetails" type="VBoxContainer"]
script = ExtResource("1_1ma3u")

[node name="UsageAndImage" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UsageAndImage"]
layout_mode = 2

[node name="Current_Usage" type="Label" parent="UsageAndImage/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Current Usage:"

[node name="Usage" type="TextEdit" parent="UsageAndImage/VBoxContainer"]
custom_minimum_size = Vector2(300, 256)
layout_mode = 2
editable = false

[node name="VBoxContainer2" type="VBoxContainer" parent="UsageAndImage"]
layout_mode = 2

[node name="gap" type="Control" parent="UsageAndImage/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Current_Morphology_image" type="TextureRect" parent="UsageAndImage/VBoxContainer2"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
expand_mode = 4

[node name="Description_Label" type="Label" parent="."]
layout_mode = 2
text = "Description:"

[node name="Description" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
